Dernières bricoles de com’

--- a/td/com_15A/pre-projet-proffessionel.tex
+++ b/td/com_15A/pre-projet-proffessionel.tex
@@ -21,7 +21,7 @@
 \usepackage{multicol}
 \usepackage{float}
 \floatplacement{figure}{H}
-\title{\includegraphics{../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\
+\title{\includegraphics{../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\
 Pré-projet Professionnel}
 \author{Guilhem Saurel}
 \date{\today}
