Suite du rapport…

--- a/mini_projets/electronique_lineaire_15A/rapport/8.tex
+++ b/mini_projets/electronique_lineaire_15A/rapport/8.tex
@@ -1,5 +1,5 @@
 \chapter{Création du typon}
-Pendant la création de ce typon, on est amenés à modifier la schématique sous Orcad pour ajouter
+Pendant la création de ce typon, on est amenés à modifier la schématique sous Orcad pour ajouter:
 \begin{itemize}
     \item le pont diviseur en entrée;
     \item le strap et la résistance pour mesurer l’impédance d’entrée;
@@ -7,4 +7,10 @@ Pendant la création de ce typon, on est amenés à modifier la schématique sou
     \item les capacités de découplage entre les étages;
 \end{itemize}
 
-Il nous faut aussi créer un schéma sur une seule page.
+Il nous faut aussi créer un schéma sur une seule page:
+
+\begin{center}
+    \includegraphics[height=24cm]{images/circuit-pour-typon}
+
+    \includegraphics[height=24cm]{images/typon}
+\end{center}
