fin de la finalisation

--- a/be/img_15A/rapport.tex
+++ b/be/img_15A/rapport.tex
@@ -519,4 +519,5 @@ On a donc directement le code MATLAB suivant :
 Comme précédement, on peut étudier les pertes en réflexion en traçant $S_{11}$ en fonction de la fréquence. On peut également tracer la puissance réfléchie ($\cfrac{|b_1|^2}{2}$) et la puissance rayonnée ($P_{ray} = \cfrac{V_2I_2^\ast}{2}$) en fonctiond de cette fréquence.
 
 \inputminted[linenos]{matlab}{src/2c.m}
+\includegraphics[width=\linewidth,height=8cm]{img/2c} TODO
 \end{document}
