rapport du MP15

--- a/mini_projets/electronique_lineaire_15A/rapport/6.tex
+++ b/mini_projets/electronique_lineaire_15A/rapport/6.tex
@@ -1,4 +1,4 @@
- \chapter{Bilan}
+ \chapter{Bilan intermédiaire}
   \section{Respect du cahier des charges}
     \begin{tabular}{|l|l|c|c|c|c|c|}
      \hline
