--- a/mini_projets/electronique_lineaire_15A/rapport/7.tex
+++ b/mini_projets/electronique_lineaire_15A/rapport/7.tex
@@ -90,6 +90,7 @@ Nos deux premiers étages consomment 9.85mA.
 
 \subsection{Tensions de polarisation}
 Retour sur la polarisation des deux premiers étages, l’impédance de sortie ayant été modifiée, et les tensions d’alimentation aussi:
+
 \begin{tabular}{|l|r|r|r|r|}
     \hline
     & Étage 1: théorique & Étage 1: expérimental & Étage 2: théorique & Étage 2: expérimental \\
@@ -149,4 +150,5 @@ $F_{CHF}$ = 190kHz.
 
 \subsection {Impédances}
 Entrée: 68000\ohm
-Sortie: 0\ohm % TODO
+
+Cette impédance est assez choquante, mais en effet, les résistances $R_{1B1}$ et $R_{1B2}$ ne peuvent pas nous permettre d’obtenir la valeur de la résistance d’entrée souhaitée.
