--- a/mini_projets/electronique_lineaire_15A/rapport/8.tex
+++ b/mini_projets/electronique_lineaire_15A/rapport/8.tex
@@ -1,4 +1,4 @@
-\chapter{Création du typon}
+\chapter{Conception du typon}
 Pendant la création de ce typon, on est amenés à modifier la schématique sous Orcad pour ajouter:
 \begin{itemize}
     \item le pont diviseur en entrée;
