pr. an.:milieu de la seconde partie de la première séance

--- a/projets/analogique_2A/ipy/1.ipynb
+++ b/projets/analogique_2A/ipy/1.ipynb
@@ -10,11 +10,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": "from math import log",
+     "input": "from math import log\nfrom IPython.core.display import Image",
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 18
     },
     {
      "cell_type": "heading",
@@ -31,7 +31,7 @@
     {
      "cell_type": "markdown",
      "metadata": {},
-     "source": "$f_0 = 250 \\kilo\\hertz$ \u00e0 2% \n\n$\\Delta f = 15\\kilo\\hertz$\n\n$E = 12 \\volt$\n\n$E_B = 6 \\volt$\n\n$V_T = 0.6\\volt$\n\n$V_{CE_{SAT}} = 0.3\\volt$\n\n$i_c = 10 \\milli\\ampere$\n\n$R_C = \\cfrac{E-V_{CE_{SAT}}}{i_{c1}} = \\cfrac{11.7}{10\\cdot10^{-3}} \\simeq 1.2 \\kilo\\ohm$\n\n$\\Delta V_b = E - V_T$\n\n$\\Delta V_c = E - V_{CE_{SAT}}$\n\n$k = \\cfrac{\\Delta V_b}{\\Delta V_c}$\n\n$T = 2 R_B C \\ln\\cfrac{(E_B -V_T)+k(E-V_{CE_{SAT}})}{E_B-V_T}$ \\drarrow \n\n$R_B = \\cfrac{1}{2 f_0 C \\ln\\cfrac{E_B - V_T + k(E -\u00a0Vcesat)}}$"
+     "source": "$f_0 = 250 \\kilo\\hertz$ \u00e0 2% \n\n$\\Delta f = 15\\kilo\\hertz$\n\n$E = 12 \\volt$\n\n$E_B = 6 \\volt$\n\n$V_T = 0.6\\volt$\n\n$V_{CE_{SAT}} = 0.3\\volt$\n\n$i_c = 10 \\milli\\ampere$\n\n$R_C = \\cfrac{E-V_{CE_{SAT}}}{i_{c1}} = \\cfrac{11.7}{10\\cdot10^{-3}} \\simeq 1.2 \\kilo\\ohm$\n\n$\\Delta V_b = E - V_T$\n\n$\\Delta V_c = E - V_{CE_{SAT}}$\n\n$k = \\cfrac{\\Delta V_b}{\\Delta V_c}$\n\n$T = 2 R_B C \\ln\\cfrac{(E_B -V_T)+k(E-V_{CE_{SAT}})}{E_B-V_T} \\Rightarrow R_B = \\cfrac{1}{2 f_0 C \\ln\\cfrac{E_B - V_T + k(E -\u00a0Vcesat)}{E_B-V_T}}$"
     },
     {
      "cell_type": "code",
@@ -111,6 +111,61 @@
      "level": 2,
      "metadata": {},
      "source": "Analyse de Monte Carlo"
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "Pour chaque param\u00e8tre \u00e0 \u00e9tudier, on fait 500 simulations pour une distribution Gaussiene du param\u00e8tre, et on affiche un histograme des fr\u00e9quences obtenues.\nOn devrait donc pouvoir comparer les 4 histogrammes obtenus pour voir rapidement quel param\u00e8tre a le plus d\u2019influence."
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "* On commence par regarder l\u2019influence des param\u00e8tres R (\u00e0 5%) et C (\u00e0  20%):"
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "TODO: montecarlo_R_C.png"
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "* Ensuite on regarde l\u2019influence des param\u00e8tres du transistor, en commen\u00e7ant par $\\beta$ (\u00e0 50%):"
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "TODO: montecarlo_beta.png"
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "On remarque que dans certains cas, la tension observ\u00e9e diverge, et spice nous en alerte."
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "* Puis $C_{jc}$:"
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "TODO: montecarlo_Cjc.png"
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "* Et enfin $C_{je}$"
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "TODO: montecarlo_Cje.png"
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "TODO: CCL"
     },
     {
      "cell_type": "code",
