pr. an.: Préambule

--- a/projets/analogique_2A/tex/rapport.tex
+++ b/projets/analogique_2A/tex/rapport.tex
@@ -40,6 +40,34 @@
 
 \tableofcontents
 
+\section*{Préambule}
+
+Ceci est notre rapport du Projet Analogique dans le cadre du cours de M. Bernal
+en deuxième année d’Électronique et traitement du signal à l’INP-ENSEEIHT.
+
+Il est en grande partie généré à partir des quelques notes que nous avons pris
+pendant les différentes séances, et inclue un maximum de captures d’écran du logiciel
+Orcad-Pspice que nous avons utilisé pour ce projet, ainsi que du code Python
+qui nous a servi pour nos différents calculs.
+
+Ce code Python est formatté grace au plugin LaTeX «minted», et vous pourrez donc
+facilement le repérer avec sa fonte monospaced, sa coloration syntaxique et
+la numérotation des lignes. Les blocs de code sont parfois suivis de la sortie
+standart de ce code, dans un environnement verbatim (monospaced noir).
+
+\subsection*{Remerciements}
+Un grand merci à nos encadrants, très présents, qui nous ont permis d’avancer rapidement:
+\begin{itemize}
+    \item M. A.;
+    \item M. B.;
+\end{itemize}
+
+On remercie également les logiciels qui nous ont permis d’avancer rapidemend et proprement:
+\begin{itemize}
+    \item IPython, et son fameux Notebook;
+    \item XeTex;
+\end{itemize}
+
 \include{1-genere}
 
 \end{document}
