--- a/projets/analogique_2A/IPy/1.ipynb
+++ b/projets/analogique_2A/IPy/1.ipynb
@@ -14,7 +14,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -55,9 +55,20 @@
      "source": "Circuit"
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "Image('schematic_vco.png')",
+     "language": "python",
      "metadata": {},
-     "source": "TODO: schematic vco.png"
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "png": "schematic_vco.png",
+       "prompt_number": 3,
+       "text": "<IPython.core.display.Image at 0x9cf37ac>"
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
@@ -71,9 +82,20 @@
      "source": "Apr\u00e8s une premi\u00e8re simulation, on a une fr\u00e9quence d\u2019oscillation de 238 kHz, ce qui n\u2019entre pas dans les 2% des 250kHz voulus, mais on pourra jouer sur $E_B$ plus tard avec un potentiom\u00e8tre, et on pourrait \u00e9galement essayer d\u2019autres valeurs pour les capacit\u00e9s avec les valeurs des r\u00e9sistances $R_B$ appair\u00e9es."
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "Image('oscillation_vco.png')",
+     "language": "python",
      "metadata": {},
-     "source": "TODO: oscillation vco.png"
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "png": "oscillation_vco.png",
+       "prompt_number": 4,
+       "text": "<IPython.core.display.Image at 0x9cf31ec>"
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
@@ -87,9 +109,20 @@
      "source": "$K = \\cfrac{\\Delta f}{\\Delta v}$"
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "Image('variation_freq_vco.png')",
+     "language": "python",
      "metadata": {},
-     "source": "TODO: variation freq vco.png"
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "png": "variation_freq_vco.png",
+       "prompt_number": 14,
+       "text": "<IPython.core.display.Image at 0x9cf320c>"
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -123,9 +156,20 @@
      "source": "* On commence par regarder l\u2019influence des param\u00e8tres R (\u00e0 5%) et C (\u00e0  20%):"
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "Image('montecarlo_R_C.png')",
+     "language": "python",
      "metadata": {},
-     "source": "TODO: montecarlo_R_C.png"
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "png": "montecarlo_R_C.png",
+       "prompt_number": 13,
+       "text": "<IPython.core.display.Image at 0x9cf3bcc>"
+      }
+     ],
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -133,9 +177,20 @@
      "source": "* Ensuite on regarde l\u2019influence des param\u00e8tres du transistor, en commen\u00e7ant par $\\beta$ (\u00e0 50%):"
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "Image('montecarlo_beta.png')",
+     "language": "python",
      "metadata": {},
-     "source": "TODO: montecarlo_beta.png"
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "png": "montecarlo_beta.png",
+       "prompt_number": 12,
+       "text": "<IPython.core.display.Image at 0x9cf3aac>"
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -148,9 +203,20 @@
      "source": "* Puis $C_{jc}$:"
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "Image('montecarlo_Cjc.png')",
+     "language": "python",
      "metadata": {},
-     "source": "TODO: montecarlo_Cjc.png"
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "png": "montecarlo_Cjc.png",
+       "prompt_number": 7,
+       "text": "<IPython.core.display.Image at 0x9cf37cc>"
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -158,14 +224,100 @@
      "source": "* Et enfin $C_{je}$"
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "Image('montecarlo_Cje.png')",
+     "language": "python",
      "metadata": {},
-     "source": "TODO: montecarlo_Cje.png"
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "png": "montecarlo_Cje.png",
+       "prompt_number": 8,
+       "text": "<IPython.core.display.Image at 0x9cf338c>"
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": "TODO: CCL"
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": "Hi\u00e9rarchisation du VCO"
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "En suivant le poly \u00abOrcad-Pspice Hierarchie et sous-circuit\u00bb, nous avons chang\u00e9 notre sch\u00e9matique en une v\u00e9ritable librairie, et la sch\u00e9matique peut maintenant se comporter comme n\u2019importe quel autre composant dans une autre sch\u00e9matique."
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "Image('schematic_low_hierarchy.png')\nImage('schematic_high_hierarchy.png')\nImage('schematic_vco_final.png')",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "png": "schematic_vco_final.png",
+       "prompt_number": 9,
+       "text": "<IPython.core.display.Image at 0x9cf3b8c>"
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "On effectue enfine une simulation temporelle pour v\u00e9rifier que tout continue de fonctionner:"
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "Image('simu_temporelle_bloc_hierarchique.png')",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "png": "simu_temporelle_bloc_hierarchique.png",
+       "prompt_number": 10,
+       "text": "<IPython.core.display.Image at 0x9cf380c>"
+      }
+     ],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": "Signal modulant BF"
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "On change enfin BC\u00a0par un g\u00e9n\u00e9rateur sinuso\u00efdal:"
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "Image('variation_freq_sinus_en_entree.png')",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "png": "variation_freq_sinus_en_entree.png",
+       "prompt_number": 11,
+       "text": "<IPython.core.display.Image at 0x9cf326c>"
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
