skel: titre, date, autheur & page de garde

--- a/skel.tex
+++ b/skel.tex
@@ -25,7 +25,17 @@
 \usepackage{url,hyperref}
 \usepackage{verbatim}
 \usepackage{xunicode,xltxtra}
+
+\title{\includegraphics{../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ SKELETE XeTeX}
+\author{Guilhem Saurel}
+\date{\oldstylenums{\today}}
+
 \begin{document}
+
+\begin{titlepage}
+    \maketitle
+    \tableofcontents
+\end{titlepage}
 
 \end{document}
 
