skel: meilleure numérotation des pages

--- a/skel.tex
+++ b/skel.tex
@@ -33,9 +33,13 @@
 \begin{document}
 
 \begin{titlepage}
+    \setcounter{page}{0}
     \maketitle
-    \tableofcontents
+    \thispagestyle{empty}
 \end{titlepage}
+
+\tableofcontents
+
 
 \end{document}
 
