première version du rapport intermédiaire du projet analogique

--- a/projets/analogique_2A/tex/rapport.tex
+++ b/projets/analogique_2A/tex/rapport.tex
@@ -26,7 +26,7 @@
 \usepackage{verbatim}
 \usepackage{xunicode,xltxtra}
 
-\title{\includegraphics{../../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Projet Analogique}
+\title{\includegraphics{../../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Projet Analogique \\ ~ \\ Rapport Intermédiaire}
 \author{Vincent Pétillat, Guilhem Saurel}
 \date{\oldstylenums{\today}}
 
@@ -53,21 +53,8 @@ qui nous a servi pour nos différents calculs.
 Ce code Python est formatté grace au plugin LaTeX «minted», et vous pourrez donc
 facilement le repérer avec sa fonte monospaced, sa coloration syntaxique et
 la numérotation des lignes. Les blocs de code sont parfois suivis de la sortie
-standart de ce code, dans un environnement verbatim (monospaced noir).
+standart de ce code, dans un environnement verbatim (monospaced noir et sans numérotation de ligne).
 
-\subsection*{Remerciements}
-Un grand merci à nos encadrants, très présents, qui nous ont permis d’avancer rapidement:
-\begin{itemize}
-    \item M. A.;
-    \item M. B.;
-\end{itemize}
-
-On remercie également les logiciels qui nous ont permis d’avancer rapidemend et proprement:
-\begin{itemize}
-    \item IPython, et son fameux Notebook;
-    \item XeTex;
-\end{itemize}
-
-\include{1-genere}
+\include{genere}
 
 \end{document}
