BÉPO: rapport, encore…

--- a/be/POO_2A/circuit/rapport/rapport.tex
+++ b/be/POO_2A/circuit/rapport/rapport.tex
@@ -26,7 +26,7 @@
 \usepackage{verbatim}
 \usepackage{xunicode,xltxtra}
 
-\title{\includegraphics{../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Rapport de BÉPO}
+\title{\includegraphics{../../../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Rapport de BÉPO}
 \author{Guilhem Saurel}
 \date{\oldstylenums{\today}}
 
