BÉPO: un petit pas pour l’homme…

--- a/be/POO_2A/circuit/rapport/rapport.tex
+++ b/be/POO_2A/circuit/rapport/rapport.tex
@@ -30,7 +30,7 @@
 \author{Guilhem Saurel}
 \date{\oldstylenums{\today}}
 
-\renewcommand{•}{•}
+\renewcommand{\thesection}{\Roman{section}}
 
 \begin{document}
 
@@ -71,15 +71,16 @@ Les codes sources du Bureau d’Étude sont naturellement présentes en annexe, 
 tout est disponible sur Github: \url{github.com/nim65s/N7/tree/master/be/POO_2A/circuit}, et 
 notamment le script qui sert à tout (rapport/go.sh).
 
-\section{RAS}
-rien ici pour l’instant
+\chapter{Sources}
+\section{UML}
+\includegraphics[width=\linewidth]{images/sources}
 
 \appendix
-\part{Code source}
+\chapter{Code source}
 \section{RAS}
 rien ici pour l’instant
 
-\part{Résultats}
+\chapter{Résultats}
 \include{genere}
 
 
